Update from Python 2.7 to 3.12 and migrate to Flask app

--- a/app.yaml
+++ b/app.yaml
@@ -1,24 +1,14 @@
-application: oauth-profile
-version: 2
-runtime: python27
-api_version: 1
-threadsafe: true
+runtime: python312
+instance_class: F1
+app_engine_apis: true
+automatic_scaling:
+  min_instances: 0
+  max_instances: 1
+
+env_variables:
+  AUTH_DOMAIN: 'gmail.com'
 
 handlers:
-- url: /oauth/v1/userinfo
-  script: handlers.userinfo.app
-  secure: always
-
-- url: /oauth/v2/userinfo
-  script: handlers.userinfo.app
-  secure: always
-
-- url: /
-  script: handlers.home.app
-  secure: always
-
-- url: /robots.txt
-  script: handlers.robots.app
-
 - url: /.*
-  script: handlers.notfound.app
+  secure: always
+  script: auto
